# BAHART-BOT-

./: .env  .env.example  .gitignore  DEPLOY_RENDER.md  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
analysis/: candlestick_patterns.py  price_action.py  technical_indicators.py
core/: data_fetcher.py  signal_generator.py  websocket_manager.py
docs/: README.md
telegram_bot/: bot.py  handlers.py  keyboard.py
trading/: position_manager.py  risk_manager.py  trader.py
utils/: config.py  helpers.py  logger.py
