[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "BAHART-BOT"
version = "1.0.0"
description = "A Telegram bot with advanced features"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Devilhacks9058", email = "your.email@example.com"},
]
keywords = ["telegram", "bot", "async"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
]

dependencies = [
    "python-telegram-bot==20.3",
    "python-dotenv==1.0.0",
    "pandas==2.1.3",
    "numpy==1.26.2",
    "scipy==1.11.4",
    "websocket-client==1.6.4",
    "aiohttp==3.9.1",
    "requests==2.31.0",
    "jsonschema==4.20.0",
    "pyyaml==6.0.1",
    "apscheduler==3.10.4",
    "pytz==2023.3",
]

[project.urls]
Homepage = "https://github.com/Devilhacks9058/BAHART-BOT-"
Repository = "https://github.com/Devilhacks9058/BAHART-BOT-.git"
Issues = "https://github.com/Devilhacks9058/BAHART-BOT-/issues"

[tool.setuptools]
packages = ["bahart_bot"]

[tool.black]
line-length = 100
target-version = ['py38']

[tool.isort]
profile = "black"
multi_line_mode = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 100

[tool.pylint]
max-line-length = 100
disable = ["C0111", "C0103"]
